--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        Hola perritoss me la pelan
+        Hola amiguitos ya puedo subir mi codigo a Git
     </p>
 </body>
 </html>
